# v3-node-setup

./: .gitignore  Dockerfile  README.md  create-test-ec2.sh  docker-compose.yml  install.sh  links.sh  sanity.sh  uninstall.sh
.github/workflows/: main.yml  manager.yml  smoke-test.yml
deployment/: README.md  docker-compose.yml  nginx.conf  prod.env  shared.env  staging.env
deployment/nginx/conf.d/: default.conf
ingress/nginx/: nginx.conf
ingress/nginx/conf.d/: orbs.conf
logging/: Dockerfile  README.md  create-version-file.sh  package-lock.json  package.json  tsconfig.json
logging/src/: main.ts  status.ts
manager/: .pylintrc  Makefile  README.md  manager.py  pyproject.toml  setup.cfg  status.py
manager/src/: config.py  logger.py  manager.py  system_monitor.py  system_monitor_types.py  utils.py
manager/tests/: system_monitor_test.py
setup/: README.md  config_example.json  deployment-poll.cron  generate_env_files.py  generate_wallet.py  install.sh  log_forward.py  requirements.txt
setup/scripts/: base.sh  clone-repos.sh  generate-env-files.sh  handle-guardian-info.sh  handle-node-address.sh  health-check.sh  install-dependencies.sh  main.sh  setup-manager.sh  validate-min-specs.sh
swarm/: stack.yaml
