[tool.poetry]
name = "manager"
version = "0.1.0"
description = "Python manager for Orbs v4 node validator"
authors = ["Luke Rogerson <luke@orbs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.5"
docker = "^6.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=160